# Fawry-Internship-Challenge-2

./: CMakeLists.txt  README.md  book_store.cc
include/: BookStore.h  EventType.h  Product.h  ProductCategory.h  ProductProperty.h  subscribers.h
src/: BookStore.cc  CMakeLists.txt  Product.cc  ProductProperty.cc  subscribers.cc
test/: CMakeLists.txt  basic.cc
